client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Charmonman:wght@400;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Outfit:wght@100..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');

@import "tailwindcss";

@theme {
  --font-mono: "Jetbrains Mono", "monospace";
  --font-family: "Newsreader", "serif";
  --font-special: "Playfair", "serif";
  --color-primary: #d41132;
  --color-bg-dark: #0a0808;
}
/* * {
  margin: 0;
  padding: 0;
} */

:root{
  padding: 0;
  margin: 0;
}
html{
  scroll-behavior: smooth;
}
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color:  var(--color-bg-dark);
  font-family: var(--font-family);
  color: white;
  min-height: max(884px, 100dvh);
  box-sizing: border-box;
  
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .film-grain {
    border: .1rem solid red;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 50;
    opacity: 0.04;
    background-image: url(https://lh3.googleusercontent.com/aida-public/AB6AXuC9e0Fm_t6WjsQPAMY8C0MV_neFrFlE1KxQwkSus6gAlimT4jjhH8Ae_6wpgNfy97z-KDXeD9XT9NGox2gyxNTG1ijglSF2oDbV58v2iIWQLn5SiqY0sKF2xp0IUD4a0dqorOF9R4DorPoVv1O6EJB3T9ThqfuSTvycJTHhZugGEfp6molU53wPcDJSGK311qh-Nz2zqzhueYVAr7LDzqvtFFRS23ZUSzOtV6c6nYaVbG7LrotQbmcopC4EJmJsd44_CJ97SeC0fS8)
  }
  .material-symbols-outlined {
    font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
  }
  .star-outline {
    font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24;
  }
  .hero-gradient {
    background: linear-gradient(to top, #221013 0%, rgba(34, 16, 19, 0.8) 30%, rgba(34, 16, 19, 0) 100%);
  }
}
 :root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.25);
  border-radius: 100px;
}

::-webkit-scrollbar-thumb:hover {
  background: rgba(255,255,255,0.45);
}
.toggle button.active{
  background-color: var(--color-primary);
}
/*a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

